--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = SCOPE_FYP_APP
 	url = https://github.com/him1231/SCOPE_FYP_APP.git
 	branch = master
+[submodule "SCOPE_FYP_SERVER"]
+	path = SCOPE_FYP_SERVER
+	url = https://github.com/him1231/SCOPE_FYP_SERVER.git
